--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,14 @@ export(create_errors)
 export(error_metrics)
 export(fill_NAs)
 export(forecast_model)
+export(plot_acf)
+export(plot_dist)
 export(plot_error_dist)
 export(plot_error_metrics)
 export(plot_forecast)
+export(plot_pacf)
+export(plot_qq)
+export(plot_ts)
 export(split_data)
 export(stack_data)
 export(theme_tscv)
@@ -41,6 +46,7 @@ importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(future,plan)
+importFrom(lubridate,hours)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
