--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(plot_error_metrics)
 export(plot_forecast)
 export(plot_pacf)
 export(plot_qq)
+export(plot_season)
 export(plot_ts)
 export(split_data)
 export(stack_data)
