--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,11 @@ export(create_errors)
 export(error_metrics)
 export(fill_NAs)
 export(forecast_model)
-export(plot_acf)
+export(plot_corr)
 export(plot_dist)
 export(plot_error_dist)
 export(plot_error_metrics)
 export(plot_forecast)
-export(plot_pacf)
 export(plot_qq)
 export(plot_season)
 export(plot_ts)
@@ -46,6 +45,8 @@ importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(feasts,ACF)
+importFrom(feasts,PACF)
 importFrom(future,plan)
 importFrom(lubridate,hours)
 importFrom(lubridate,month)
