--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,14 @@ export(create_errors)
 export(error_metrics)
 export(fill_NAs)
 export(forecast_model)
+export(plot_acf)
 export(plot_corr)
-export(plot_dist)
+export(plot_density)
 export(plot_error_dist)
 export(plot_error_metrics)
 export(plot_forecast)
+export(plot_histogram)
+export(plot_pacf)
 export(plot_qq)
 export(plot_season)
 export(plot_ts)
