--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(plot_qq)
 export(plot_season)
 export(plot_ts)
 export(split_data)
+export(summarise_data)
 export(theme_tscv)
 export(train_model)
 import(fable)
@@ -57,6 +58,7 @@ importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv2)
 importFrom(rlang,is_empty)
+importFrom(skimr,skim)
 importFrom(tibble,add_column)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
