Adjusted imports and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,12 @@ export(plot_histogram)
 export(plot_pacf)
 export(plot_qq)
 export(plot_season)
+export(plot_season2)
 export(plot_ts)
 export(split_data)
 export(summarise_data)
 export(theme_tscv)
+export(theme_tscv_dark)
 export(train_model)
 import(fable)
 import(fabletools)
@@ -59,6 +61,7 @@ importFrom(magrittr,"%>%")
 importFrom(readr,read_csv2)
 importFrom(rlang,is_empty)
 importFrom(skimr,skim)
+importFrom(skimr,skim_with)
 importFrom(tibble,add_column)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
