New export due to summarise_split

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(plot_season2)
 export(plot_ts)
 export(split_data)
 export(summarise_data)
+export(summarise_split)
 export(theme_tscv)
 export(theme_tscv_dark)
 export(train_model)
