Added import sfl from skimr package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv2)
 importFrom(rlang,is_empty)
+importFrom(skimr,sfl)
 importFrom(skimr,skim)
 importFrom(skimr,skim_with)
 importFrom(tibble,add_column)
