Removed import from skimr and added import from moments, new export print_split

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(plot_qq)
 export(plot_season)
 export(plot_season2)
 export(plot_ts)
+export(print_split)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
@@ -59,11 +60,10 @@ importFrom(lubridate,hours)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
+importFrom(moments,kurtosis)
+importFrom(moments,skewness)
 importFrom(readr,read_csv2)
 importFrom(rlang,is_empty)
-importFrom(skimr,sfl)
-importFrom(skimr,skim)
-importFrom(skimr,skim_with)
 importFrom(tibble,add_column)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
