New imports, exports and S3methods due to THETA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,30 +6,35 @@ S3method(fitted,MLP)
 S3method(fitted,SMEAN)
 S3method(fitted,SMEDIAN)
 S3method(fitted,TBATS)
+S3method(fitted,THETA)
 S3method(forecast,DSHW)
 S3method(forecast,ELM)
 S3method(forecast,MLP)
 S3method(forecast,SMEAN)
 S3method(forecast,SMEDIAN)
 S3method(forecast,TBATS)
+S3method(forecast,THETA)
 S3method(model_sum,DSHW)
 S3method(model_sum,ELM)
 S3method(model_sum,MLP)
 S3method(model_sum,SMEAN)
 S3method(model_sum,SMEDIAN)
 S3method(model_sum,TBATS)
+S3method(model_sum,THETA)
 S3method(residuals,DSHW)
 S3method(residuals,ELM)
 S3method(residuals,MLP)
 S3method(residuals,SMEAN)
 S3method(residuals,SMEDIAN)
 S3method(residuals,TBATS)
+S3method(residuals,THETA)
 export(DSHW)
 export(ELM)
 export(MLP)
 export(SMEAN)
 export(SMEDIAN)
 export(TBATS)
+export(THETA)
 export(bind_data)
 export(clean_data)
 export(create_errors)
@@ -89,6 +94,7 @@ importFrom(forecast,dshw)
 importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,tbats)
+importFrom(forecast,thetaf)
 importFrom(future,plan)
 importFrom(lubridate,hours)
 importFrom(lubridate,month)
