New imports from yardstick and changed exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,12 +35,13 @@ export(SMEAN)
 export(SMEDIAN)
 export(TBATS)
 export(THETA)
-export(bind_data)
 export(clean_data)
 export(create_errors)
 export(error_metrics)
 export(fill_NAs)
-export(forecast_model)
+export(me)
+export(mpe)
+export(mse)
 export(plot_acf)
 export(plot_corr)
 export(plot_density)
@@ -54,12 +55,13 @@ export(plot_season)
 export(plot_season2)
 export(plot_ts)
 export(print_split)
+export(response_vars)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
 export(theme_tscv)
 export(theme_tscv_dark)
-export(train_model)
+export(value_var)
 import(fable)
 import(fabletools)
 import(ggplot2)
@@ -114,3 +116,10 @@ importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
+importFrom(yardstick,mae_vec)
+importFrom(yardstick,mape_vec)
+importFrom(yardstick,mase_vec)
+importFrom(yardstick,metric_summarizer)
+importFrom(yardstick,metric_vec_template)
+importFrom(yardstick,rmse_vec)
+importFrom(yardstick,smape_vec)
