--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,12 +36,13 @@ export(SMEDIAN)
 export(TBATS)
 export(THETA)
 export(clean_data)
-export(create_errors)
 export(error_metrics)
+export(errors)
 export(fill_NAs)
 export(me)
 export(mpe)
 export(mse)
+export(pct_errors)
 export(plot_acf)
 export(plot_corr)
 export(plot_density)
@@ -49,11 +50,11 @@ export(plot_error_dist)
 export(plot_error_metrics)
 export(plot_forecast)
 export(plot_histogram)
+export(plot_line)
 export(plot_pacf)
 export(plot_qq)
 export(plot_season)
 export(plot_season2)
-export(plot_ts)
 export(print_split)
 export(response_vars)
 export(split_data)
