--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tscv
-Title: Functions and utilities for time series cross validation and tidy time series forecasting.
+Title: Functions and utilities for tidy time series forecasting and time series cross-validation.
 Version: 0.1.0
-Description: Provides a collection of functions and utilities for time series cross validation and tidy time series forecasting based on the tidyverts (tsibble, fable and fabletools).
+Description: The package tscv provides a collection of functions and tools for time series analysis and forecasting as well as time series cross-validation. This is mainly a set of wrapper and helper functions as well as some extensions for the packages tsibble, fable and fabletools that I find useful for research in the area of time series forecasting.
 Author: Alexander Häußer <alexander-haeusser@gmx.de>
 Maintainer: Alexander Häußer <alexander-haeusser@gmx.de>
 License: GPL-3
@@ -19,7 +19,9 @@ Imports:
     future,
     tsibble,
     fable,
-    fabletools
+    fabletools,
+    yardstick,
+    moments
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
