Added package qqplotr and avoid conflicts with ggplot2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,7 @@ export(theme_tscv_dark)
 export(value_var)
 import(fable)
 import(fabletools)
-import(ggplot2)
+import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
 importFrom(dplyr,arrange)
@@ -108,6 +108,9 @@ importFrom(moments,kurtosis)
 importFrom(moments,skewness)
 importFrom(nnfor,elm)
 importFrom(nnfor,mlp)
+importFrom(qqplotr,stat_qq_band)
+importFrom(qqplotr,stat_qq_line)
+importFrom(qqplotr,stat_qq_point)
 importFrom(readr,read_csv2)
 importFrom(rlang,is_empty)
 importFrom(tibble,add_column)
