--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     fable,
     fabletools,
     yardstick,
-    moments
+    moments,
+    qqplotr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
