--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,18 @@
 Package: tscv
 Title: Functions and utilities for tidy time series forecasting and time series cross-validation.
 Version: 0.1.0
-Description: The package tscv provides a collection of functions and tools for time series analysis and forecasting as well as time series cross-validation. This is mainly a set of wrapper and helper functions as well as some extensions for the packages tsibble, fable and fabletools that I find useful for research in the area of time series forecasting.
-Author: Alexander Häußer <alexander-haeusser@gmx.de>
-Maintainer: Alexander Häußer <alexander-haeusser@gmx.de>
+Description: The package tscv provides a collection of functions and tools for time series 
+   analysis and forecasting as well as time series cross-validation. This is mainly a set 
+   of wrapper and helper functions as well as some extensions for the packages tsibble, 
+   fable and fabletools that I find useful for research in the area of time series forecasting.
+Authors@R: 
+    person(given = "Alexander",
+           family = "Haeusser",
+           email = "alexander-haeusser@gmx.de",
+           role = c("aut", "cre"))
 License: GPL-3
+URL: https://github.com/ahaeusser/tscv
+BugReports: https://github.com/ahaeusser/tscv/issues
 Depends:
     R (>= 3.6.2)
 Imports:
