Added scale_color_tscv() and scale_fill_tscv()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ export(plot_season)
 export(plot_season2)
 export(print_split)
 export(response_vars)
+export(scale_color_tscv)
+export(scale_fill_tscv)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
