New export due to smooth_outlier()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(print_split)
 export(response_vars)
 export(scale_color_tscv)
 export(scale_fill_tscv)
+export(smooth_outlier)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
