Added package scales, removed moments, added functions from rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,15 +107,15 @@ importFrom(lubridate,month)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,rowSds)
-importFrom(moments,kurtosis)
-importFrom(moments,skewness)
 importFrom(nnfor,elm)
 importFrom(nnfor,mlp)
 importFrom(qqplotr,stat_qq_band)
 importFrom(qqplotr,stat_qq_line)
 importFrom(qqplotr,stat_qq_point)
-importFrom(readr,read_csv2)
+importFrom(rlang,as_name)
 importFrom(rlang,is_empty)
+importFrom(rlang,quo_is_null)
+importFrom(scales,pretty_breaks)
 importFrom(tibble,add_column)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
