--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,6 @@ export(THETA)
 export(clean_data)
 export(error_metrics)
 export(errors)
-export(fill_NAs)
 export(me)
 export(mpe)
 export(mse)
@@ -55,7 +54,6 @@ export(plot_pacf)
 export(plot_qq)
 export(plot_season)
 export(plot_season2)
-export(print_split)
 export(response_vars)
 export(scale_color_tscv)
 export(scale_fill_tscv)
@@ -78,9 +76,11 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
+importFrom(dplyr,first)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_if)
+importFrom(dplyr,if_else)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -92,18 +92,22 @@ importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(feasts,ACF)
 importFrom(feasts,PACF)
+importFrom(feasts,STL)
 importFrom(forecast,dshw)
 importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,tbats)
 importFrom(forecast,thetaf)
 importFrom(future,plan)
+importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,hours)
 importFrom(lubridate,month)
+importFrom(lubridate,quarter)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,rowSds)
@@ -112,11 +116,25 @@ importFrom(nnfor,mlp)
 importFrom(qqplotr,stat_qq_band)
 importFrom(qqplotr,stat_qq_line)
 importFrom(qqplotr,stat_qq_point)
+importFrom(rlang,.data)
+importFrom(rlang,abort)
 importFrom(rlang,as_name)
 importFrom(rlang,is_empty)
 importFrom(rlang,quo_is_null)
 importFrom(scales,pretty_breaks)
+importFrom(stats,acf)
+importFrom(stats,approx)
+importFrom(stats,as.ts)
+importFrom(stats,lag)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,pacf)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,time)
 importFrom(tibble,add_column)
+importFrom(tibble,add_row)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,fill)
 importFrom(tidyr,gather)
