--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,9 +33,6 @@ export(TBATS)
 export(clean_data)
 export(error_metrics)
 export(errors)
-export(me)
-export(mpe)
-export(mse)
 export(pct_errors)
 export(plot_acf)
 export(plot_corr)
@@ -46,13 +43,13 @@ export(plot_histogram)
 export(plot_line)
 export(plot_pacf)
 export(plot_qq)
-export(response_vars)
 export(scale_color_tscv)
 export(scale_fill_tscv)
 export(smooth_outlier)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
+export(target_vars)
 export(theme_tscv)
 export(theme_tscv_dark)
 export(value_var)
@@ -133,10 +130,3 @@ importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
-importFrom(yardstick,mae_vec)
-importFrom(yardstick,mape_vec)
-importFrom(yardstick,mase_vec)
-importFrom(yardstick,metric_summarizer)
-importFrom(yardstick,metric_vec_template)
-importFrom(yardstick,rmse_vec)
-importFrom(yardstick,smape_vec)
