Added imports and globalVariables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ import(fabletools)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
@@ -105,6 +106,7 @@ importFrom(nnfor,mlp)
 importFrom(qqplotr,stat_qq_band)
 importFrom(qqplotr,stat_qq_line)
 importFrom(qqplotr,stat_qq_point)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,abort)
 importFrom(rlang,as_name)
