--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ import(fabletools)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
+importFrom(distributional,dist_normal)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
