--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R:
            email = "alexander-haeusser@gmx.de",
            role = c("aut", "cre"))
 License: GPL-3
-URL: https://github.com/ahaeusser/tscv
+URL: https://github.com/ahaeusser/tscv, https://ahaeusser.github.io/tscv/
 BugReports: https://github.com/ahaeusser/tscv/issues
 Depends:
     R (>= 4.0.0)
