Adjust imports and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,10 @@ export(TBATS)
 export(clean_data)
 export(error_metrics)
 export(errors)
+export(estimate_kurtosis)
+export(estimate_mode)
+export(estimate_skewness)
+export(interpolate_missing)
 export(pct_errors)
 export(plot_acf)
 export(plot_corr)
@@ -49,6 +53,7 @@ export(smooth_outlier)
 export(split_data)
 export(summarise_data)
 export(summarise_split)
+export(summarise_stats)
 export(target_vars)
 export(theme_tscv)
 export(theme_tscv_dark)
@@ -92,6 +97,7 @@ importFrom(feasts,STL)
 importFrom(forecast,dshw)
 importFrom(forecast,forecast)
 importFrom(forecast,msts)
+importFrom(forecast,na.interp)
 importFrom(forecast,tbats)
 importFrom(forecast,thetaf)
 importFrom(future,plan)
@@ -117,6 +123,7 @@ importFrom(scales,pretty_breaks)
 importFrom(stats,acf)
 importFrom(stats,approx)
 importFrom(stats,as.ts)
+importFrom(stats,density)
 importFrom(stats,lag)
 importFrom(stats,mad)
 importFrom(stats,median)
