--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(MLP)
 export(SMEAN)
 export(SMEDIAN)
 export(TBATS)
-export(clean_data)
+export(check_data)
 export(error_metrics)
 export(errors)
 export(estimate_kurtosis)
