Added function create_grid() and modified split_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(SMEAN)
 export(SMEDIAN)
 export(TBATS)
 export(check_data)
+export(create_grid)
 export(error_metrics)
 export(errors)
 export(estimate_kurtosis)
