New exports for plot_bar() and plot_point()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(estimate_skewness)
 export(interpolate_missing)
 export(pct_errors)
 export(plot_acf)
+export(plot_bar)
 export(plot_corr)
 export(plot_density)
 export(plot_error_metrics)
@@ -47,6 +48,7 @@ export(plot_forecast)
 export(plot_histogram)
 export(plot_line)
 export(plot_pacf)
+export(plot_point)
 export(plot_qq)
 export(scale_color_tscv)
 export(scale_fill_tscv)
