Added import tidytext::scale_x_reordered

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,3 +143,4 @@ importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
+importFrom(tidytext,scale_x_reordered)
