--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     matrixStats,
     qqplotr,
     scales,
-    distributional
+    distributional,
+    tidytext
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
