Added helper functions lst_to_env() and %out%

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(residuals,MLP)
 S3method(residuals,SMEAN)
 S3method(residuals,SMEDIAN)
 S3method(residuals,TBATS)
+export("%out%")
 export(DSHW)
 export(ELM)
 export(MLP)
@@ -38,6 +39,7 @@ export(estimate_kurtosis)
 export(estimate_mode)
 export(estimate_skewness)
 export(interpolate_missing)
+export(lst_to_env)
 export(pct_errors)
 export(plot_acf)
 export(plot_bar)
