Added helper function create_name()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(SMEDIAN)
 export(TBATS)
 export(check_data)
 export(create_grid)
+export(create_name)
 export(error_metrics)
 export(errors)
 export(estimate_kurtosis)
