New imports and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,24 +5,28 @@ S3method(fitted,ELM)
 S3method(fitted,MLP)
 S3method(fitted,SMEAN)
 S3method(fitted,SMEDIAN)
+S3method(fitted,SNAIVE2)
 S3method(fitted,TBATS)
 S3method(forecast,DSHW)
 S3method(forecast,ELM)
 S3method(forecast,MLP)
 S3method(forecast,SMEAN)
 S3method(forecast,SMEDIAN)
+S3method(forecast,SNAIVE2)
 S3method(forecast,TBATS)
 S3method(model_sum,DSHW)
 S3method(model_sum,ELM)
 S3method(model_sum,MLP)
 S3method(model_sum,SMEAN)
 S3method(model_sum,SMEDIAN)
+S3method(model_sum,SNAIVE2)
 S3method(model_sum,TBATS)
 S3method(residuals,DSHW)
 S3method(residuals,ELM)
 S3method(residuals,MLP)
 S3method(residuals,SMEAN)
 S3method(residuals,SMEDIAN)
+S3method(residuals,SNAIVE2)
 S3method(residuals,TBATS)
 export("%out%")
 export(DSHW)
@@ -30,6 +34,7 @@ export(ELM)
 export(MLP)
 export(SMEAN)
 export(SMEDIAN)
+export(SNAIVE2)
 export(TBATS)
 export(check_data)
 export(create_grid)
@@ -94,6 +99,7 @@ importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
+importFrom(dplyr,slice_tail)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
@@ -111,6 +117,7 @@ importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,hours)
 importFrom(lubridate,month)
 importFrom(lubridate,quarter)
+importFrom(lubridate,wday)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,rowSds)
