--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(fitted,DSHW)
 S3method(fitted,ELM)
+S3method(fitted,EXPERT)
 S3method(fitted,MLP)
 S3method(fitted,SMEAN)
 S3method(fitted,SMEDIAN)
@@ -9,6 +10,7 @@ S3method(fitted,SNAIVE2)
 S3method(fitted,TBATS)
 S3method(forecast,DSHW)
 S3method(forecast,ELM)
+S3method(forecast,EXPERT)
 S3method(forecast,MLP)
 S3method(forecast,SMEAN)
 S3method(forecast,SMEDIAN)
@@ -16,6 +18,7 @@ S3method(forecast,SNAIVE2)
 S3method(forecast,TBATS)
 S3method(model_sum,DSHW)
 S3method(model_sum,ELM)
+S3method(model_sum,EXPERT)
 S3method(model_sum,MLP)
 S3method(model_sum,SMEAN)
 S3method(model_sum,SMEDIAN)
@@ -23,6 +26,7 @@ S3method(model_sum,SNAIVE2)
 S3method(model_sum,TBATS)
 S3method(residuals,DSHW)
 S3method(residuals,ELM)
+S3method(residuals,EXPERT)
 S3method(residuals,MLP)
 S3method(residuals,SMEAN)
 S3method(residuals,SMEDIAN)
@@ -31,6 +35,7 @@ S3method(residuals,TBATS)
 export("%out%")
 export(DSHW)
 export(ELM)
+export(EXPERT)
 export(MLP)
 export(SMEAN)
 export(SMEDIAN)
@@ -87,7 +92,9 @@ importFrom(dplyr,first)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_if)
+importFrom(dplyr,group_split)
 importFrom(dplyr,if_else)
+importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -114,7 +121,8 @@ importFrom(forecast,tbats)
 importFrom(forecast,thetaf)
 importFrom(future,plan)
 importFrom(grDevices,colorRampPalette)
-importFrom(lubridate,hours)
+importFrom(lubridate,date)
+importFrom(lubridate,hour)
 importFrom(lubridate,month)
 importFrom(lubridate,quarter)
 importFrom(lubridate,wday)
@@ -137,7 +145,7 @@ importFrom(stats,acf)
 importFrom(stats,approx)
 importFrom(stats,as.ts)
 importFrom(stats,density)
-importFrom(stats,lag)
+importFrom(stats,lm)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,pacf)
