--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,14 +44,18 @@ export(TBATS)
 export(check_data)
 export(create_grid)
 export(create_name)
-export(error_metrics)
-export(errors)
 export(estimate_kurtosis)
 export(estimate_mode)
 export(estimate_skewness)
+export(expand_split)
+export(initialize_split)
 export(interpolate_missing)
 export(lst_to_env)
-export(pct_errors)
+export(make_accuracy)
+export(make_errors)
+export(make_future)
+export(make_names)
+export(make_split)
 export(plot_acf)
 export(plot_bar)
 export(plot_corr)
@@ -65,8 +69,10 @@ export(plot_point)
 export(plot_qq)
 export(scale_color_tscv)
 export(scale_fill_tscv)
+export(slice_test)
+export(slice_train)
 export(smooth_outlier)
-export(split_data)
+export(split_index)
 export(summarise_data)
 export(summarise_split)
 export(summarise_stats)
