--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,8 +42,6 @@ export(SMEDIAN)
 export(SNAIVE2)
 export(TBATS)
 export(check_data)
-export(create_grid)
-export(create_name)
 export(estimate_kurtosis)
 export(estimate_mode)
 export(estimate_skewness)
@@ -54,8 +52,9 @@ export(lst_to_env)
 export(make_accuracy)
 export(make_errors)
 export(make_future)
-export(make_names)
 export(make_split)
+export(name_file)
+export(name_number)
 export(plot_acf)
 export(plot_bar)
 export(plot_corr)
@@ -76,10 +75,8 @@ export(split_index)
 export(summarise_data)
 export(summarise_split)
 export(summarise_stats)
-export(target_vars)
 export(theme_tscv)
 export(theme_tscv_dark)
-export(value_var)
 import(fable)
 import(fabletools)
 import(ggplot2, except = stat_qq_line)
