--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(estimate_kurtosis)
 export(estimate_mode)
 export(estimate_skewness)
 export(expand_split)
+export(file_name)
 export(initialize_split)
 export(interpolate_missing)
 export(lst_to_env)
@@ -53,8 +54,7 @@ export(make_accuracy)
 export(make_errors)
 export(make_future)
 export(make_split)
-export(name_file)
-export(name_number)
+export(number_string)
 export(plot_acf)
 export(plot_bar)
 export(plot_corr)
