New imports and exports, exception for fabletools::forecast()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(fitted,DSHW)
 S3method(fitted,ELM)
 S3method(fitted,EXPERT)
+S3method(fitted,MEDIAN)
 S3method(fitted,MLP)
 S3method(fitted,SMEAN)
 S3method(fitted,SMEDIAN)
@@ -11,6 +12,7 @@ S3method(fitted,TBATS)
 S3method(forecast,DSHW)
 S3method(forecast,ELM)
 S3method(forecast,EXPERT)
+S3method(forecast,MEDIAN)
 S3method(forecast,MLP)
 S3method(forecast,SMEAN)
 S3method(forecast,SMEDIAN)
@@ -19,6 +21,7 @@ S3method(forecast,TBATS)
 S3method(model_sum,DSHW)
 S3method(model_sum,ELM)
 S3method(model_sum,EXPERT)
+S3method(model_sum,MEDIAN)
 S3method(model_sum,MLP)
 S3method(model_sum,SMEAN)
 S3method(model_sum,SMEDIAN)
@@ -27,6 +30,7 @@ S3method(model_sum,TBATS)
 S3method(residuals,DSHW)
 S3method(residuals,ELM)
 S3method(residuals,EXPERT)
+S3method(residuals,MEDIAN)
 S3method(residuals,MLP)
 S3method(residuals,SMEAN)
 S3method(residuals,SMEDIAN)
@@ -36,6 +40,7 @@ export("%out%")
 export(DSHW)
 export(ELM)
 export(EXPERT)
+export(MEDIAN)
 export(MLP)
 export(SMEAN)
 export(SMEDIAN)
@@ -78,7 +83,7 @@ export(summarise_stats)
 export(theme_tscv)
 export(theme_tscv_dark)
 import(fable)
-import(fabletools)
+import(fabletools, except = forecast)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
@@ -121,7 +126,6 @@ importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,na.interp)
 importFrom(forecast,tbats)
-importFrom(forecast,thetaf)
 importFrom(future,plan)
 importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,date)
@@ -144,6 +148,7 @@ importFrom(rlang,as_name)
 importFrom(rlang,is_empty)
 importFrom(rlang,quo_is_null)
 importFrom(scales,pretty_breaks)
+importFrom(slider,slide_dbl)
 importFrom(stats,acf)
 importFrom(stats,approx)
 importFrom(stats,as.ts)
