--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,9 +46,12 @@ export(SMEAN)
 export(SMEDIAN)
 export(SNAIVE2)
 export(TBATS)
+export(acf_vec)
 export(check_data)
+export(estimate_acf)
 export(estimate_kurtosis)
 export(estimate_mode)
+export(estimate_pacf)
 export(estimate_skewness)
 export(expand_split)
 export(file_name)
@@ -60,15 +63,11 @@ export(make_errors)
 export(make_future)
 export(make_split)
 export(number_string)
-export(plot_acf)
+export(pacf_vec)
 export(plot_bar)
-export(plot_corr)
 export(plot_density)
-export(plot_error_metrics)
-export(plot_forecast)
 export(plot_histogram)
 export(plot_line)
-export(plot_pacf)
 export(plot_point)
 export(plot_qq)
 export(scale_color_tscv)
@@ -82,7 +81,6 @@ export(summarise_split)
 export(summarise_stats)
 export(theme_tscv)
 export(theme_tscv_dark)
-import(fable)
 import(fabletools, except = forecast)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
@@ -95,6 +93,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,full_join)
@@ -118,15 +117,11 @@ importFrom(dplyr,slice_tail)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
-importFrom(feasts,ACF)
-importFrom(feasts,PACF)
-importFrom(feasts,STL)
 importFrom(forecast,dshw)
 importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,na.interp)
 importFrom(forecast,tbats)
-importFrom(future,plan)
 importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,date)
 importFrom(lubridate,hour)
@@ -135,7 +130,6 @@ importFrom(lubridate,quarter)
 importFrom(lubridate,wday)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
-importFrom(matrixStats,rowSds)
 importFrom(nnfor,elm)
 importFrom(nnfor,mlp)
 importFrom(qqplotr,stat_qq_band)
@@ -151,6 +145,7 @@ importFrom(scales,pretty_breaks)
 importFrom(slider,slide_dbl)
 importFrom(stats,acf)
 importFrom(stats,approx)
+importFrom(stats,as.formula)
 importFrom(stats,as.ts)
 importFrom(stats,density)
 importFrom(stats,lm)
@@ -169,4 +164,6 @@ importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
+importFrom(tidyr,unnest)
 importFrom(tidytext,scale_x_reordered)
+importFrom(utils,tail)
