--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,11 +57,14 @@ export(expand_split)
 export(file_name)
 export(initialize_split)
 export(interpolate_missing)
+export(log_header)
+export(log_time)
 export(lst_to_env)
 export(make_accuracy)
 export(make_errors)
 export(make_future)
 export(make_split)
+export(make_tsibble)
 export(number_string)
 export(pacf_vec)
 export(plot_bar)
@@ -85,6 +88,7 @@ import(fabletools, except = forecast)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
+importFrom(devtools,session_info)
 importFrom(distributional,dist_normal)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -122,6 +126,7 @@ importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,na.interp)
 importFrom(forecast,tbats)
+importFrom(glue,glue)
 importFrom(grDevices,colorRampPalette)
 importFrom(lubridate,date)
 importFrom(lubridate,hour)
@@ -141,6 +146,7 @@ importFrom(rlang,abort)
 importFrom(rlang,as_name)
 importFrom(rlang,is_empty)
 importFrom(rlang,quo_is_null)
+importFrom(rstudioapi,versionInfo)
 importFrom(scales,pretty_breaks)
 importFrom(slider,slide_dbl)
 importFrom(stats,acf)
