--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     tidytext,
     glue,
     rstudioapi,
-    devtools
+    devtools,
+    crayon
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
