Added and modified helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,9 +55,10 @@ export(estimate_pacf)
 export(estimate_skewness)
 export(expand_split)
 export(file_name)
+export(glue_header)
 export(initialize_split)
 export(interpolate_missing)
-export(log_header)
+export(log_platform)
 export(log_time)
 export(lst_to_env)
 export(make_accuracy)
@@ -88,6 +89,8 @@ import(fabletools, except = forecast)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
+importFrom(crayon,bold)
+importFrom(crayon,italic)
 importFrom(devtools,session_info)
 importFrom(distributional,dist_normal)
 importFrom(dplyr,all_of)
