Debugging NAMESPACE trouble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,7 +85,7 @@ export(summarise_split)
 export(summarise_stats)
 export(theme_tscv)
 export(theme_tscv_dark)
-import(fabletools, except = forecast)
+import(fabletools)
 import(ggplot2, except = stat_qq_line)
 import(purrr)
 import(tsibble)
@@ -125,7 +125,6 @@ importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(forecast,dshw)
-importFrom(forecast,forecast)
 importFrom(forecast,msts)
 importFrom(forecast,na.interp)
 importFrom(forecast,tbats)
